Fixed the positioning of the article cards on mobile and Ipad version. Had forgotten to add margins. Received some feedback on that from Erik Wibom (who I have mentionen in my readme.md file as well). Thank you Erik!

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -491,7 +491,10 @@ div#map {
    display: flex;
    justify-content: center;
    align-items: center;
-   margin: 60px;
+   margin-left: auto;
+   margin-right: auto;
+   margin-top: 60px;
+   margin-bottom: 60px;
    box-shadow: 0 20px 50px rgba(0,0,0,0.2);
    overflow: hidden;
 }
